force-app/main/default/objects/Order/fields/ExternalD365OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalD365OrderNumber__c</fullName>
    <description>External Dynamic s365 Order Number</description>
    <label>ExternalD365OrderNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>