force-app/main/default/objects/Order/fields/NumLineItems__c.field-meta.xml
<CustomField>
    <fullName>NumLineItems__c</fullName>
    <description>Number of LineItems</description>
    <label>NumLineItems</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>