force-app/main/default/objects/Order/fields/Retail_Store__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retail Store</description>
    <label>Retail Store</label>
    <referenceTo>RetailStore</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>